Update dependencies and refactor imports in example app
- Added new dependencies: @ai-sdk-tools/agents and @ai-sdk-tools/devtools.
- Refactored imports in various files to use updated paths for ai-sdk-tools.
- Adjusted the dev script in package.json to remove turbopack.
- Improved formatting and organization in shared.ts and balance-sheet.ts files.
- Updated README and documentation to reflect changes in memory provider imports.

--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "bun run build:deps && next build --turbopack",
     "build:deps": "cd ../.. && bun run build",
     "start": "next start",
@@ -11,6 +11,8 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@ai-sdk-tools/agents": "^0.2.2",
+    "@ai-sdk-tools/devtools": "^0.8.4",
     "@ai-sdk/openai": "^2.0.53",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
